--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "app-module-path": "^1.1.0",
+    "async": "^2.0.1",
     "eslint": "^3.2.2",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
