--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "mongodb": "^2.2.5",
     "osprey": "^0.3.2",
     "raml2html": "^2.4.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2"
   }
 }
