--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "typings install",
-    "prestart": "tsc",
-    "start": "node build/src/boot",
-    "pretest": "tsc",
-    "test": "mocha",
+    "start": "node index",
+    "test": "istanbul cover -x \"**/*.spec.ts\" -e .ts _mocha",
     "lint": "tslint -s node_modules/tslint-stylish -t stylish src/**/*.ts test/**/*.ts"
   },
   "repository": {
@@ -18,30 +16,15 @@
   "author": "Centro de Computação Científica e Software Livre (C3SL)",
   "license": "GPL-3.0",
   "dependencies": {
-    "app-module-path": "^1.1.0",
-    "async": "^2.0.1",
-    "eslint": "^3.2.2",
     "express": "^4.14.0",
-    "gulp": "^3.9.1",
-    "gulp-istanbul": "^1.0.0",
-    "gulp-jscs": "^4.0.0",
-    "gulp-jscs-stylish": "^1.4.0",
-    "gulp-jshint": "^2.0.1",
-    "gulp-mocha": "^3.0.0",
-    "gulp-nodemon": "^2.1.0",
-    "gulp-raml": "^0.1.3",
-    "gulp-rename": "^1.2.2",
-    "gulp-size": "^2.1.0",
-    "gulp-util": "^3.0.7",
-    "jshint": "^2.9.2",
-    "mongodb": "^2.2.5",
     "osprey": "^0.3.2",
-    "raml2html": "^2.4.0",
+    "ts-node": "^1.2.3",
     "typescript": "^1.8.10",
     "typings": "^1.3.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "istanbul": "1.1.0-alpha.1",
     "mocha": "^3.0.2",
     "tslint": "^3.14.0",
     "tslint-stylish": "^2.1.0-beta"
