--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,10 @@
     "pretty": true,
     "target": "es5",
     "module": "commonjs",
-    "outDir": "./build",
-    "noImplicitAny": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "sourceMap": true
+    "noImplicitAny": true
   },
   "exclude": [
-      "node_modules"
+    "node_modules"
   ],
   "compileOnSave": false
 }
